# bechdu_partner

./: .gitignore  README.md  firebase.json  pubspec.yaml
android/: build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/kotlin/com/bechduapp/partner/: MainActivity.kt
android/app/src/main/kotlin/com/example/bechdu_partner/: MainActivity.kt
app_bundle/BUNDLE-METADATA/com.android.tools.build.libraries/: dependencies.pb
app_bundle/BUNDLE-METADATA/com.android.tools.build.profiles/: baseline.prof  baseline.profm
app_bundle/base/: assets.pb  resources.pb
app_bundle/base/dex/: classes3.dex  classes4.dex
app_bundle/base/manifest/: AndroidManifest.xml
ios/: firebase_app_id_file.json
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/data/feature/: device_informations.dart  image_picker_service.dart  pdf_buffer.dart  razorpay.dart  url_launcher_service.dart
lib/data/firebase_api/: firebase_api.dart
linux/: CMakeLists.txt  my_application.cc
macos/: firebase_app_id_file.json
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: GoogleService-Info.plist
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+661 files in other folders)
